# NewsAIEmailer

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  prompts.py
functions/: __init__.py  ai_client.py  email_service.py  scraping.py
